syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Remxin/home-life/server/pb";

message Family {
    string id = 1;
    string name = 2;
    string owner_id = 3;
    google.protobuf.Timestamp created_at = 4;
}