syntax = "proto3";

package pb;
option go_package = "github.com/Remxin/home-life/server/pb";

message Permissions {
    string id = 1;
    string family_id = 2;
    bool can_read = 3;
    bool can_edit = 4;
    bool can_create = 5;
    bool can_modify = 6;
}