syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Remxin/home-life/server/pb";

message User {
    string id = 1;
    string name = 2;
    string full_name = 3;
    string email = 4;
    google.protobuf.Timestamp password_changed_at = 5;
    google.protobuf.Timestamp created_at = 6;
}